dhall/tests/type-inference/failure/unit/RecordSelectionTypeNotUnionType.txt
Type error: error: NotARecord
 --> <current file>:1:0
  |
1 | Bool.x
  | ^^^^^^ NotARecord
  |
